<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/home_main_layout">

<!--    Appbar start-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/new_launcher_foreground"
                    android:layout_gravity="center_vertical" />

            </FrameLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>
<!--    Appbar end-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FBC02D">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/top_banner_pager"
                    android:layout_width="match_parent"
                    android:layout_height="160dp" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/top_banner_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:layout_margin="10dp"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabBackground="@drawable/indicator_selector"/>

            </FrameLayout>

<!--            For you start-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="false"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/for_you"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginHorizontal="5dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/home_for_you"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
<!--            For you end-->

<!--            Quick access start-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="false"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quick access"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="20dp"
                        android:gravity="center">

<!--                        Item 1-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/home_generate"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/icon_grad_bg_1"
                                android:src="@drawable/ic_round_restaurant_menu_28"
                                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Menu"
                                android:textSize="12sp"
                                android:layout_marginTop="5dp"/>
                        </LinearLayout>

<!--                        Item 2-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginStart="40dp">

                            <ImageButton
                                android:id="@+id/home_my_orders"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/icon_grad_bg_2"
                                android:src="@drawable/ic_round_history_28"
                                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Orders"
                                android:textSize="12sp"
                                android:layout_marginTop="5dp"/>
                        </LinearLayout>

<!--                        Item 3-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginStart="40dp">

                            <ImageButton
                                android:id="@+id/home_chat"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/icon_grad_bg_3"
                                android:src="@drawable/ic_round_chat_bubble_outline_24"
                                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/chat"
                                android:textSize="12sp"
                                android:layout_marginTop="5dp"/>
                        </LinearLayout>

<!--                        Item 4-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginStart="40dp">

                            <ImageButton
                                android:id="@+id/home_support"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/icon_grad_bg_4"
                                android:src="@drawable/ic_baseline_support_agent_28"
                                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Support"
                                android:textSize="12sp"
                                android:layout_marginTop="5dp"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
<!--            Quick access end-->

            <com.google.android.material.card.MaterialCardView
                style="@style/Theme.FoodDelivery.CardView.TopRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/browse_all"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/home_food"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="5dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>